fixed white space below title

--- a/bubble.css
+++ b/bubble.css
@@ -5,10 +5,6 @@ body {
   margin: auto;
 }
 
-h1 {
-  margin: 6px;
-}
-
 .subt {
   margin: auto;
   color: blue;
